# tearobot

./: .env-sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pipfile  Procfile  README.md  config-sample.py  const.py  loggingconfigs.py  pyproject.toml  release-conf.yaml  tea.py  tests.py
bot/: commands.py  data_types.py  db.py  requests.py  utils.py
commands/: OCR.py  calculator.py  crypto_news.py  crypto_price.py  google.py  help.py  latest_news.py  start.py  translate.py  tweet.py  weather.py
db/: bot.db.m1.sql  bot.db.sql
services/: calculator.py  crypto_news.py  crypto_price.py  google.py  latest_news.py  translate.py  tweet.py  weather.py
tbot/: commands.py  db.py  types.py  utils.py
